fix layout bugs

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -43,6 +43,8 @@ video
 
 #header
   display: none
+  li
+    white-space: nowrap
 
 #header-logo-holder
   svg
@@ -61,7 +63,7 @@ video
     height: 13px
 
 .close-menu
-  display: none 
+  display: none
 
 // MOBILE MENU
 #main-content,
